设置GC参数 -XX:+PrintGCDetails